# custodia-agent-runtime

./: AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml
client/: README.md
docs/: README.md
docs/tasks/: task1.md  task2.md  task3.md  task4.md  task5.md  task6.md  task7.md  task8.md
docs/tasks/deep-review-tasks/: review-task1.md
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/src/custodia/app/: main.py  runtime.py  settings.py
server/src/custodia/application/: daily_briefing.py  guardrails.py  intake_agent.py  policy_agent.py  ports.py
server/src/custodia/domain/: agents.py  audit.py  identity.py  intake.py  patients.py  prompts.py  tasks.py
server/src/custodia/infrastructure/identity/: fake_auth.py
server/src/custodia/infrastructure/llm/: fake_llm.py
server/src/custodia/infrastructure/persistence/: in_memory_audit_repository.py  in_memory_patient_repository.py
server/src/custodia/infrastructure/prompts/: in_memory_prompt_catalog.py
server/src/custodia/infrastructure/rag/: keyword_retriever.py
server/src/custodia/interfaces/api/: intake_routes.py  middleware.py  routes.py  schemas.py
server/tests/unit/: test_intake_api.py  test_intake_prompt.py  test_patient_domain.py  test_runtime.py
